# nanoaios

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  ROADMAP.md  TESTING.md
docs/discussion/: Memory-System.md  extension-first.md
examples/tools/: translate.toml  weather.toml
src/: api.rs  cli.rs  config.rs  kernel.rs  main.rs  memory.rs  runtime.rs  tool.rs
